fix spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -515,7 +515,7 @@ nav, .nav-wrapper, .navbar-brand {
     }
   }
   .blog-item-container {
-    margin: 50px auto 80px;
+    margin: 30px auto 80px;
   }
 }
 @media only screen and (max-width: 767px) {
